EXTRA_DIST = \
	src/sycamore.asd \
	src/array.lisp \
	src/binary.lisp \
	src/cgen.lisp \
	src/fuzz-test.lisp \
	src/heap.lisp \
	src/interfaces.lisp \
	src/package.lisp \
	src/queue.lisp \
	src/regress.lisp \
	src/rope.lisp \
	src/sycamore.asd \
	src/tree.lisp \
	src/trie.lisp \
	src/trim.lisp \
	src/ttree.lisp \
	src/util.lisp \
	src/wb-tree.lisp \
	example.lisp
